# meocloud-gui-linux

./: .gitignore  README.md  deps  install_meocloud_targz.sh  meocloud-gui  plugin_deps  plugin_paths  requirements.txt
data/: meocloud-gui.desktop  oicloud-gui.desktop
docs/: dbus_api.txt
ipc/: daemon_core.thrift  generate_python_stubs.sh  shell.thrift
meocloud_caja/: meocloud-caja.py
meocloud_core/: VERSION  daemon  librsync.so.1  libsqlite3.so.0  meocloudd
meocloud_dolphin/: .hg_archival.txt  .hgignore  CMakeLists.txt  INSTALL  TODO  dolphin-meocloud-dbus.cpp  dolphin-meocloud-dbus.h  dolphin-meocloud-plugin.cpp  dolphin-meocloud-plugin.desktop  dolphin-meocloud-plugin.h  shell_types.cpp
meocloud_dolphinnext/: CMakeLists.txt  dolphin-meocloud-plugin.cpp  shell_constants.cpp  shell_constants.h  shell_types.h
meocloud_gui/: application.py  codes.py  constants.py  credentials.py  data_structures.py  decorators.py  loghandler.py  preferences.py  settings.py  settings_meocloud.py  settings_oicloud.py  stoppablethread.py  strings.py  thrift_utils.py  utils.py
meocloud_gui/.ropeproject/: globalnames
meocloud_gui/core/: api.py  core.py  core_client.py  core_listener.py  dbusservice.py  meocloudd  shell.py  shellproxy.py
meocloud_gui/core/core/: libcrypto.so.1.0.0  libcurl.so.4  libssl.so.1.0.0  libyaml-0.so.2
meocloud_gui/gui/: aboutdialog.py  customnotebook.py  indicator.py  missingdialog.py  pages.py  prefswindow.py  progressdialog.py  selectivesyncwindow.py  setupwindow.py  spinnerbox.py  trayicon.py
meocloud_gui/protocol/: Core.py  UI.py  ttypes.py
meocloud_gui/protocol/daemon_core/: Core.py  UI.py  ttypes.py
meocloud_gui/protocol/shell/: ttypes.py
meocloud_nautilus/: meocloud-nautilus.py
meocloud_nemo/: meocloud-nemo.py
meocloud_pantheon/: CMakeLists.txt  plugin.vala
meocloud_pantheon/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  plugin.c
meocloud_pantheon/vapi/: marlincore-C.vapi
meocloud_pantheonnext/: CMakeLists.txt  README  meocloud.plug  plugin.vala
meocloud_pantheonnext/vapi/: python.vapi
meocloud_thunar/: TODO  wscript
meocloud_thunar/src/: cloud-provider.c  cloud-provider.h  meocloud-provider.c  meocloud-provider.h  thunar-meocloud-plugin.c
po/: br.po  generate_mo.sh  generate_po.sh  messages.po  pt.po  pt_BR.po  pt_PT.po
post_install_scripts/: deb.sh  rpm.sh
strings/: br.txt  convert_to_native_format.py  create_strings.sh  pt.txt
